deployment-test.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: nginx-test
      app.kubernetes.io/component: nginx-test
      app.kubernetes.io/instance: nginx-test
    name: nginx-test
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: nginx-test
    template:
      metadata:
        labels:
          deploymentconfig: nginx-test
      spec:
        containers:
        - image: nginx-test
          imagePullPolicy: Always
          name: nginx-test
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - nginx-test
        from:
          kind: ImageStreamTag
          name: nginx-test:test
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: nginx-test
      app.kubernetes.io/component: nginx-test
      app.kubernetes.io/instance: nginx-test
    name: nginx-test
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: nginx-test
      app.kubernetes.io/component: nginx-test
      app.kubernetes.io/instance: nginx-test
    name: nginx-test
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      #insecureEdgeTerminationPolicy: Redirect
      insecureEdgeTerminationPolicy: None
      termination: edge
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIBSTCB8KADAgECAhAojM4FRwbFnh/GP17DaLTRMAoGCCqGSM49BAMCMBYxFDAS
[...]
        -----END CERTIFICATE-----
      key: |
        -----BEGIN EC PRIVATE KEY-----
        MHcCAQEEIOLRVx0+8Ns6fESWLZ8dvMgfA6+2ZdPNTSP3SGOOgQ2hoAoGCCqGSM49
[...]
        RzQ8yX0vaNxR/KplLEaQe8bCkGMZ4oy5yA==
        -----END EC PRIVATE KEY-----      
      to:
        kind: Service
        name: nginx-test
        weight: 100
      wildcardPolicy: None
